--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,26 +6,25 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="apple-touch-img/logo-precomposed" href="{{ site.url }}/img/logo.jpg">
-    <link rel="apple-touch-img/logo" href="{{ site.url }}/img/logo.jpg">
-    <link rel="apple-touch-img/logo" sizes="72x72" href="{{ site.url }}/img/logo.jpg">
-    <link rel="apple-touch-img/logo" sizes="114x114" href="{{ site.url }}/img/logo.jpg">
+    <link rel="apple-touch-img/logo-precomposed" href="{{ site.url }}/img/logo.2jpg">
+    <link rel="apple-touch-img/logo" href="{{ site.url }}/img/logo2.jpg">
+    <link rel="apple-touch-img/logo" sizes="72x72" href="{{ site.url }}/img/logo2.jpg">
+    <link rel="apple-touch-img/logo" sizes="114x114" href="{{ site.url }}/img/logo2.jpg">
 
     <link href="{{ site.url }}/css/styles.css" rel="stylesheet" type="text/css">
-    <link href="{{ site.url }}/img/logo.jpg" rel="shortcut icon">
+    <link href="{{ site.url }}/img/logo2.jpg" rel="shortcut icon">
 </head>
 <body>
   <div class="sidebar">
     <a href="/" class="logo">
-      <img src="{{ site.url }}/img/logo.jpg">
+      <img src="{{ site.url }}/img/logo2.jpg">
     </a>
 
     <ul class="nav">
       <div class="nav-inner">
         <li><a href="{{ site.url }}"><span class="icon doc"></span>blog</a></li>
-        <li><a href="{{ site.url }}/about"><span class="icon info"></span>about</a></li>
-        <li><a href="{{ site.url }}/projects"><span class="icon code"></span>projects</a></li>
-        <li><a href="http://spamthe.net"><span class="icon link"></span>links</a></li>
+        <li><a href="{{ site.url }}/about.html"><span class="icon info"></span>about</a></li>
+        <li><a href="{{ site.url }}/#"><span class="icon code"></span>projects</a></li>
         <li><a href="http://github.com/skr"><span class="icon github"></span>github</a></li>
         <li><a href="http://twitter.com/sukrubezen"><span class="icon twitter"></span>twitter</a></li>
       </div>
