--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,19 +6,19 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="apple-touch-img/logo-precomposed" href="{{ site.url }}/img/logo.jpg">
-    <link rel="apple-touch-img/logo" href="{{ site.url }}/img/logo.jpg">
-    <link rel="apple-touch-img/logo" sizes="72x72" href="{{ site.url }}/img/logo.jpg">
-    <link rel="apple-touch-img/logo" sizes="114x114" href="{{ site.url }}/img/logo.jpg">
+    <link rel="apple-touch-img/logo-precomposed" href="{{ site.url }}/img/logo2.jpg">
+    <link rel="apple-touch-img/logo" href="{{ site.url }}/img/logo2.jpg">
+    <link rel="apple-touch-img/logo" sizes="72x72" href="{{ site.url }}/img/logo2.jpg">
+    <link rel="apple-touch-img/logo" sizes="114x114" href="{{ site.url }}/img/logo2.jpg">
 
     <link href="{{ site.url }}/css/styles.css" rel="stylesheet" type="text/css">
     <link href="{{ site.url }}/css/pygments.css" rel="stylesheet" type="text/css">
-    <link href="{{ site.url }}/img/logo.jpg" rel="shortcut icon">
+    <link href="{{ site.url }}/img/logo2.jpg" rel="shortcut icon">
 </head>
 <body>
   <div class="sidebar">
     <a href="{{ site.url }}" class="logo">
-      <img src="{{ site.url }}/img/logo.jpg">
+      <img src="{{ site.url }}/img/logo2.jpg">
     </a>
 
     <ul class="nav">
