--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@
       <div class="nav-inner">
         <li><a href="{{ site.url }}/about"><span class="icon info"></span>about</a></li>
         <li><a href="{{ site.url }}/#"><span class="icon code"></span>projects</a></li>
-        <li><a href="http://github.com/skr"><span class="icon github"></span>github</a></li>
+        <li><a href="http://github.com/sukrubezen"><span class="icon github"></span>github</a></li>
         <li><a href="http://twitter.com/sukrubezen"><span class="icon twitter"></span>twitter</a></li>
       </div>
     </ul>
