Update social links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
     <ul class="nav">
       <div class="nav-inner">
         <li><a href="{{ site.url }}/about.html"><span class="icon info"></span>about</a></li>
-        <li><a href="{{ site.url }}/#"><span class="icon code"></span>projects</a></li>
         <li><a href="http://github.com/sukrubezen"><span class="icon github"></span>github</a></li>
         <li><a href="http://twitter.com/sukrubezen"><span class="icon twitter"></span>twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/sukrubezen/"><span class="icon linkedin"></span>linkedin</a></li>
       </div>
     </ul>
   </div>
